--- a/Fnb_Order/Admin/Admin.Master
+++ b/Fnb_Order/Admin/Admin.Master
@@ -1113,6 +1113,8 @@ h1 {
                             <img src="../Images/dashnboard.png" class="menu-pic" /><span style="float: left">Edit/View Order</span> </a></li>
                     <li><a href="AddItem.aspx">
                             <img src="../Images/dashnboard.png" class="menu-pic" /><span style="float: left">Add Item</span> </a></li>
+                        <li><a href="AddCustomer.aspx">
+                            <img src="../Images/dashnboard.png" class="menu-pic" /><span style="float: left">Add Customer</span> </a></li>
                 
                         </ul>
                 </li>
